_notes/errbyfile/O000000O0OO00O.java.txt
ru\metaculture\protection\O000000O0OO00O.java:140: error: cannot assign a 
value to static final variable O0000000000
            O0000000000 = a_.player.getYaw();
            ^

ru\metaculture\protection\O000000O0OO00O.java:141: error: cannot assign a 
value to static final variable O00000000000
            O00000000000 = a_.player.getPitch();
            ^

  ru\metaculture\protection\O000000O0OO00O.java:140: error: cannot assign 
a value to static final variable O0000000000
              O0000000000 = a_.player.getYaw();
              ^

  ru\metaculture\protection\O000000O0OO00O.java:141: error: cannot assign 
a value to static final variable O00000000000
              O00000000000 = a_.player.getPitch();
              ^
